opam-version: "2.0"
name: "gen-json-string"
version: "0.0.1"
synopsis: "Generate random JSON strings from JSON Schema input"
maintainer: "Yawar Amin <yawar.amin@gmail.com>"
authors: "Yawar Amin <yawar.amin@gmail.com>"
license: "ISC"
homepage: "TBD"
bug-reports: "TBD"
depends: [
  "dune" {build & >= "1.8.0"}
  "ocaml" {>= "4.06.0"}
  "ppx_deriving_yojson" {>= "3.5.1" & < "4.0.0"}
  "yojson" {>= "1.7.0" & < "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
